--- a/frontend/styles/Results.module.css
+++ b/frontend/styles/Results.module.css
@@ -19,4 +19,7 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
 }
